# vivo_scrap

./: .env.example  .gitignore  AGENTS.md  main.py  project.txt  pyproject.toml  requirements.txt
src/: config.py  database.py  login.py  models.py  scraper.py
tests/: test_database.py  test_scraper.py
